--- a/train.ipynb
+++ b/train.ipynb
@@ -60,20 +60,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_learning_rate(initial_learning_rate=1e-7,\n",
-    "                  maximum_learning_rate=6e-4,\n",
-    "                  minimum_learning_rate=6e-5,\n",
-    "                  warmup_steps=20_0000,\n",
-    "                  decay_steps=200_0000,\n",
-    "                  alpha=0.0):\n",
+    "def get_learning_rate(learning_rate=6e-4,\n",
+    "                      warmup_steps=20_0000,\n",
+    "                      decay_steps=200_0000,\n",
+    "                      alpha=0.0):\n",
     "    def decayed_learning_rate(step=1):\n",
     "        if step <= warmup_steps:\n",
-    "            return (initial_learning_rate + maximum_learning_rate) / (warmup_steps / step)\n",
-    "        cosine_decay = 0.5 * (1 + math.cos(math.pi * step / decay_steps))\n",
-    "        decayed = (1 - alpha) * cosine_decay + alpha\n",
-    "        return max(\n",
-    "            minimum_learning_rate,\n",
-    "            maximum_learning_rate * decayed)\n",
+    "            mult = step / float(warmup_steps)\n",
+    "        else:\n",
+    "            progress = (step - warmup_steps) / (decay_steps - warmup_steps)\n",
+    "            mult = 0.5 * (1 + math.cos(math.pi * progress))\n",
+    "            mult = max(0.1, mult)\n",
+    "        return learning_rate * mult\n",
     "    return decayed_learning_rate"
    ]
   },
