update train sample

--- a/train.ipynb
+++ b/train.ipynb
@@ -35,31 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = BertWordPieceTokenizer('vocab.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gpt = GPT(vocab_size=tokenizer.get_vocab_size(),\n",
-    "          layer_size=12,\n",
-    "          block_size=1024,\n",
-    "          embedding_size=768,\n",
-    "          num_attention_heads=12,\n",
-    "          embedding_dropout=0.1,\n",
-    "          attention_dropout=0.1,\n",
-    "          residual_dropout=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_learning_rate(learning_rate=6e-4,\n",
     "                      warmup_steps=20_0000,\n",
     "                      decay_steps=200_0000,\n",
@@ -72,34 +47,9 @@
     "            mult = 0.5 * (1 + math.cos(math.pi * progress))\n",
     "            mult = max(0.1, mult)\n",
     "        return learning_rate * mult\n",
-    "    return decayed_learning_rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gpt.compile(\n",
-    "    optimizer=tfa.optimizers.AdamW(\n",
-    "        weight_decay=0.1,\n",
-    "        learning_rate=get_learning_rate(),\n",
-    "        beta_1=0.9,\n",
-    "        beta_2=0.95,\n",
-    "        epsilon=1e-8,\n",
-    "        name='AdamW',\n",
-    "        clipnorm=1.0\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return decayed_learning_rate\n",
+    "\n",
+    "\n",
     "def data_generator(path, batch_size=4):\n",
     "    batch = []\n",
     "    with open(path) as fp:\n",
@@ -129,13 +79,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = tf.data.Dataset.from_generator(\n",
-    "    functools.partial(\n",
-    "        data_generator,\n",
-    "        path='/home/qhduan/DATA10T/seagate/DATASETS/bd-chat/chat.txt'),\n",
-    "    output_types=(tf.int32, tf.int32),\n",
-    "    output_shapes=(tf.TensorShape([None, None]), tf.TensorShape([None, None]))\n",
-    ")"
+    "tokenizer = BertWordPieceTokenizer('vocab.txt')\n",
+    "\n",
+    "gpt = GPT(vocab_size=tokenizer.get_vocab_size(),\n",
+    "          layer_size=12,\n",
+    "          block_size=1024,\n",
+    "          embedding_size=768,\n",
+    "          num_attention_heads=12,\n",
+    "          embedding_dropout=0.1,\n",
+    "          attention_dropout=0.1,\n",
+    "          residual_dropout=0.1)\n",
+    "\n",
+    "gpt.compile(\n",
+    "    optimizer=tfa.optimizers.AdamW(\n",
+    "        weight_decay=0.1,\n",
+    "        learning_rate=get_learning_rate(),\n",
+    "        beta_1=0.9,\n",
+    "        beta_2=0.95,\n",
+    "        epsilon=1e-8,\n",
+    "        name='AdamW',\n",
+    "        clipnorm=1.0\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "gpt._set_inputs(tf.keras.layers.Input((None,), dtype=tf.int32))"
    ]
   },
   {
@@ -144,7 +111,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gpt._set_inputs(tf.keras.layers.Input((None,), dtype=tf.int32))"
+    "dataset = tf.data.Dataset.from_generator(\n",
+    "    functools.partial(\n",
+    "        data_generator,\n",
+    "        path='/home/qhduan/DATA10T/seagate/DATASETS/bd-chat/chat.txt'),\n",
+    "    output_types=(tf.int32, tf.int32),\n",
+    "    output_shapes=(tf.TensorShape([None, None]), tf.TensorShape([None, None]))\n",
+    ")"
    ]
   },
   {
