fix gpt problem

--- a/test.ipynb
+++ b/test.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,18 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "assert PositionEmbedding(\n",
     "    max_position, C\n",
-    ")(tf.random.uniform((B, L, C))).shape == [max_position, C]"
+    ")(tf.random.uniform((B, L, C))).shape == [1, L, C]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,6 +116,75 @@
     "    tf.random.uniform((B, L), dtype=tf.int64, maxval=10)\n",
     ").shape == [B, L, vocab_size]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformer = Transformer(C, attention_head, 0.1, 0.1)\n",
+    "x = tf.random.uniform((B, L, C))\n",
+    "y, kv = transformer(x[:, :-1, :])\n",
+    "y2, kv2 = transformer(x[:, -1:, :], kv)\n",
+    "y3, kv3 = transformer(x[:, :, :])\n",
+    "assert y.shape == (B, L - 1, C)\n",
+    "assert y2.shape == (B, 1, C)\n",
+    "assert y3.shape == (B, L, C)\n",
+    "assert tf.reduce_sum(tf.pow(y2[0][0] - y3[0][-1], 2)).numpy() < 1e-8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpt = GPT(\n",
+    "    vocab_size=vocab_size,\n",
+    "    layer_size=layer_size,\n",
+    "    block_size=max_position,\n",
+    "    embedding_dropout=embedding_dropout,\n",
+    "    embedding_size=C,\n",
+    "    num_attention_heads=attention_head,\n",
+    "    attention_dropout=attention_dropout,\n",
+    "    residual_dropout=residual_dropout\n",
+    ")\n",
+    "x = tf.random.uniform((B, L, C))\n",
+    "y, kv = transformer(x[:, :-1, :])\n",
+    "y2, kv2 = transformer(x[:, -1:, :], kv)\n",
+    "y3, kv3 = transformer(x[:, :, :])\n",
+    "assert tf.reduce_sum(tf.pow(y2[0][0] - y3[0][-1], 2)).numpy() < 1e-8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpt = GPT(\n",
+    "    vocab_size=vocab_size,\n",
+    "    layer_size=layer_size,\n",
+    "    block_size=max_position,\n",
+    "    embedding_dropout=embedding_dropout,\n",
+    "    embedding_size=C,\n",
+    "    num_attention_heads=attention_head,\n",
+    "    attention_dropout=attention_dropout,\n",
+    "    residual_dropout=residual_dropout\n",
+    ")\n",
+    "gpt.compile(optimizer=tf.keras.optimizers.Adam(0.1))\n",
+    "x = tf.random.uniform((100, 10), maxval=5, dtype=tf.int32)\n",
+    "gpt.fit(x, x, batch_size=10, epochs=10, verbose=0)\n",
+    "assert gpt.evaluate(x, x, verbose=0) <= 1e-8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
