fix pos emb bug; add temperature and top_p parameters;

--- a/loading.ipynb
+++ b/loading.ipynb
@@ -300,13 +300,13 @@
     "from tokenizers import BertWordPieceTokenizer\n",
     "tokenizer = BertWordPieceTokenizer(\n",
     "    './clue-vocab.txt',\n",
-    "    lowercase=True,\n",
-    "    add_special_tokens=False)"
+    "    lowercase=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
     "\n",
     "    # find the top pth index to cut off. careful we don't want to cutoff everything!\n",
     "    # result will be [batch_size, vocab_perm]\n",
-    "    p_expanded = p if isinstance(p, float) else p[:, None]\n",
+    "    p_expanded = p\n",
     "    exclude_mask = tf.logical_not(\n",
     "        tf.logical_or(cumulative_probabilities < p_expanded, tf.range(vocab_size)[None] < 1))\n",
     "\n",
@@ -506,19 +506,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "@tf.function\n",
-    "def sample(initial_inputs, length):\n",
+    "def sample(initial_inputs, length, temperature=1.0, p=0.95):\n",
     "    layer_size = 48\n",
     "    embedding_size = 1536\n",
     "    attention_head = 24\n",
     "\n",
     "    i = tf.constant(0, dtype=tf.int64)\n",
     "    initial_logits, kv_cache = serve(initial_inputs)\n",
-    "    inputs = top_p_sample(initial_logits[:, -1, :])\n",
+    "    \n",
+    "    inputs = top_p_sample(initial_logits[:, -1, :] / temperature, p=p)\n",
     "    stores = tf.concat([initial_inputs, inputs], axis=1)\n",
     "\n",
     "    def _cond(i, inputs, kv_cache, stores):\n",
@@ -526,8 +527,8 @@
     "\n",
     "    def _body(i, inputs, kv_cache, stores):\n",
     "        new_logits, new_kv_cache = serve_cache(inputs, kv_cache)\n",
-    "        \n",
-    "        new_inputs = top_p_sample(new_logits[:, -1, :])\n",
+    "\n",
+    "        new_inputs = top_p_sample(new_logits[:, -1, :] / temperature, p=p)\n",
     "        new_stores = tf.concat([stores, new_inputs], axis=-1)\n",
     "        new_kv_cache = tf.concat([\n",
     "            kv_cache,\n",
@@ -557,16 +558,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokens = tokenizer.encode('天气不错').ids"
+    "tokens = tokenizer.encode('天气不错', add_special_tokens=False).ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,7 @@
        "<tf.Tensor: shape=(1, 4), dtype=int64, numpy=array([[1646, 3134,  581, 5774]])>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -594,16 +595,18 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[1646 3134  581 5774 6294 2302 1153 3290 5494 3684 6294 2377  705 1181\n",
-      "   579 2805 1160 6294 4384 2863]], shape=(1, 20), dtype=int64)\n",
-      "天 气 不 错 ， 想 去 海 边 玩 ， 所 以 叫 上 朋 友 ， 结 果\n"
+      "[[1646 3134  581 5774 6294 1111  580 3904 2709 1797 1185 4595 3196 2804\n",
+      "  1083  579 3904 5812  647  545]], shape=(1, 20), dtype=int64)\n",
+      "天 气 不 错 ， 南 下 的 日 子 可 能 没 有 北 上 的 长 了 。\n"
      ]
     }
    ],
    "source": [
     "ret = sample(\n",
     "    tf.constant([tokens], dtype=tf.int64),\n",
-    "    tf.constant(15, dtype=tf.int64)\n",
+    "    tf.constant(15, dtype=tf.int64),\n",
+    "    tf.constant(0.9, dtype=tf.float32),\n",
+    "    tf.constant(0.95, dtype=tf.float32)\n",
     ")\n",
     "print(ret)\n",
     "for s in ret.numpy():\n",
@@ -612,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -620,17 +623,21 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[1646 3134  581 5774 6294 1893 1840 5306  708 3261 3241]\n",
-      " [1646 3134  581 5774 6294 2804  660  678 2413 5507 1047]], shape=(2, 11), dtype=int64)\n",
-      "天 气 不 错 ， 小 宝 贝 们 活 泼\n",
-      "天 气 不 错 ， 有 些 人 把 运 动\n"
+      "[[1646 3134  581 5774  545  748 2741 1489  611 2387  982  627 1463 5467\n",
+      "  1641 6294 2377  705 1627 5980  581 1643 4468 6294 3783]\n",
+      " [1646 3134  581 5774 6294 1646 4173 2507 4468 6294  580 1100 5390 3084\n",
+      "  1185  705 5390 1008 2753 1647 5857  545 5444  754 2013]], shape=(2, 25), dtype=int64)\n",
+      "天 气 不 错 。 但 是 因 为 打 击 乐 器 较 多 ， 所 以 声 音 不 够 美 ， 甚\n",
+      "天 气 不 错 ， 天 空 挺 美 ， 下 午 跑 步 可 以 跑 到 晒 太 阳 。 身 体 已\n"
      ]
     }
    ],
    "source": [
     "ret = sample(\n",
-    "    tf.constant([tokens, tokens], dtype=tf.int64),\n",
-    "    tf.constant(6, dtype=tf.int64)\n",
+    "    tf.constant([tokens] * 2, dtype=tf.int64),\n",
+    "    tf.constant(20, dtype=tf.int64),\n",
+    "    tf.constant(0.9, dtype=tf.float32),\n",
+    "    tf.constant(0.95, dtype=tf.float32)\n",
     ")\n",
     "print(ret)\n",
     "for s in ret.numpy():\n",
@@ -639,14 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "metadata": {
     "scrolled": false
    },
@@ -692,17 +692,12 @@
     "gpt.save('./gpt_model_tf2', include_optimizer=False, signatures={\n",
     "    'serving_default': sample.get_concrete_function(\n",
     "        tf.TensorSpec(shape=[None, None], dtype=tf.int64, name=\"inp\"),\n",
-    "        tf.TensorSpec(shape=[None,], dtype=tf.int64, name=\"length\")\n",
+    "        tf.TensorSpec(shape=[None,], dtype=tf.int64, name=\"length\"),\n",
+    "        tf.TensorSpec(shape=[None,], dtype=tf.float32, name=\"temperature\"),\n",
+    "        tf.TensorSpec(shape=[None,], dtype=tf.float32, name=\"top_p\")\n",
     "    )\n",
     "})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
